--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
                             <img src="./img/me.png" class='detail-img' alt="a full stack developer">
                         </div>
                         <span class='description'>Hello, I am a Full Stack Developer. I am a NAIT Graduate, but mostly I am self-taught, I have serious passion for building full stack websites, technologies like MERN. I also love to teach programming to people that just started. I love web development and always willing to learn new technologies</span>
+                        <a href="https://github.com/Alluysios" target='_blank' class="github-link">View my Github<i class="fa fa-github" aria-hidden="true"></i></a>
                     </div>
                     <div class="skills">
-                        <h2 class='heading-secondary'>Technical Skills</h2>
+                        <h2 class='heading-secondary'>Skills</h2>
                         <div>
                             <span class='skill'>HTML</span>
                             <span class='skill'>CSS/SaSS</span>
@@ -109,7 +110,7 @@
                         </div>
                         <div class="portfolio-detail">
                             <span class="title">Fresh Travel (My Blog)</span>
-                            <span class='description'>Fresh Travel my own blog that I built using React, Redux, MongoDB, Nodejs. Building the site was a lot of fun teaches me a bunch of stuff that I just figured it out. The site has a lot of features such as authentication, comments, admin panel for creating, updating, deleting blogs/posts and favorites. Check it out and see my adventure ❤️ .</span>
+                            <span class='description'>Fresh Travel my own blog that I built using React, Redux, MongoDB, Nodejs. Building the site was a lot of fun teaches me a bunch of stuff that I just figured out. The site has a lot of features such as authentication, comments, admin panel for creating, updating, deleting blogs/posts and favorites. Check it out and see my adventure ❤️ .</span>
                             <a href='https://freshtravelers.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
