Updated Skills and Portfolio

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                             <span class='skill'>HTML</span>
                             <span class='skill'>CSS/SaSS</span>
                             <span class='skill'>Javascript</span>
-                            <span class='skill'>React</span>
+                            <span class='skill'>React/React Native/Redux</span>
                             <span class='skill'>Node.js</span>
                             <span class='skill'>MongoDB</span>
-                            <span class='skill'>Redux with React</span>
+                            <span class='skill'>PHP (Basics including OOP)/MySQL</span>
                             <span class='skill'>Git and NPM</span>
                             <span class='skill'>Photoshop</span>
                             <span class='skill'>Sketch</span>
@@ -96,12 +96,42 @@
                     <div class="portfolio-highlight">
                         <h2 class='heading-secondary default'>Latest Project</h2>
                         <div class="portfolio-image-container">
+                            <img src='img/portfolio/port1.jpg' alt='arriba fashion' class='portfolio-image'>
+                        </div>
+                        <div class="portfolio-detail">
+                            <span class="title">Stress Friends (MERN)</span>
+                            <span class='description'>Stress Friends a facebook clone social media web application, but for people with axiety where they can share their hardships and help one another.</span>
+                            <a href='https://arribafb.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="portfolio-card">
+                        <div class="portfolio-image-container">
                             <img src='img/portfolio/feature.png' alt='arriba fashion' class='portfolio-image'>
                         </div>
                         <div class="portfolio-detail">
                             <span class="title">Arriba Fashion & Beauty (MERN)</span>
                             <span class='description'>Arriba Fashion & Beauty is a MERN version of Arriba Fashion. It has added feature like the cart component and more friendly UI.</span>
                             <a href='https://arribafb.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="portfolio-card">
+                        <div class="portfolio-image-container">
+                            <img src='img/portfolio/github1.jpeg' alt='arriba fashion' class='portfolio-image'>
+                        </div>
+                        <div class="portfolio-detail">
+                            <span class="title">Chatty App (React and Node.js with socket.io)</span>
+                            <span class='description'>Chatty App is a realtime chat web application it is built by using the socket.io library. You can create room and chat together.</span>
+                            <a href='https://github.com/Alluysios/chatty-app' class='portfolio-link' target="_blank">Go to Repository <i class="fa fa-globe" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="portfolio-card">
+                        <div class="portfolio-image-container">
+                            <img src='img/portfolio/github.jpeg' alt='arriba fashion' class='portfolio-image'>
+                        </div>
+                        <div class="portfolio-detail">
+                            <span class="title">Tracky App (React Native)</span>
+                            <span class='description'>Tracky app is mobile application where you can create track marks and save them in your device.</span>
+                            <a href='https://github.com/Alluysios/trackapp-reactnative' class='portfolio-link' target="_blank">Go to Repository <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-card">
