--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <img src='img/portfolio/fresh.JPG' alt='arriba fashion' class='portfolio-image'>
                         </div>
                         <div class="portfolio-detail">
-                            <span class="title">Fresh Travel (My Blog)</span>
+                            <span class="title">Fresh Travel</span>
                             <span class='description'>Fresh Travel my own blog that I built using React, Redux, MongoDB, Nodejs. Building the site was a lot of fun teaches me a bunch of stuff that I just figured out. The site has a lot of features such as authentication, comments, admin panel for creating, updating, deleting blogs/posts and favorites. Check it out and see my adventure ❤️ .</span>
                             <a href='https://freshtravelers.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
