--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                             <span class="title">Stress Friends (MERN)</span>
                             <span class='description'>Stress Friends a facebook clone social media web application, but for people with axiety where they can share their hardships and help one another.</span>
                             <a href='https://arribafb.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <a href='https://github.com/Alluysios/stress-friends' class='portfolio-link' target="_blank">Check Repo <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-card">
@@ -112,6 +113,17 @@
                             <span class="title">Arriba Fashion & Beauty (MERN)</span>
                             <span class='description'>Arriba Fashion & Beauty is a MERN version of Arriba Fashion. It has added feature like the cart component and more friendly UI.</span>
                             <a href='https://arribafb.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <a href='https://github.com/Alluysios/arribafashion-beauty-MERN' class='portfolio-link' target="_blank">Check Repo <i class="fa fa-globe" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="portfolio-card">
+                        <div class="portfolio-image-container">
+                            <img src='img/portfolio/port6.jpg' alt='arriba fashion' class='portfolio-image'>
+                        </div>
+                        <div class="portfolio-detail">
+                            <span class="title">Food Edmonton Restaurants (React.js)</span>
+                            <span class='description'>A simple food search app location in edmonton using the yelp api.</span>
+                            <a href='https://alluysios.github.io/foodyrestaurants-react/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-card">
@@ -121,7 +133,7 @@
                         <div class="portfolio-detail">
                             <span class="title">Chatty App (React and Node.js with socket.io)</span>
                             <span class='description'>Chatty App is a realtime chat web application it is built by using the socket.io library. You can create room and chat together.</span>
-                            <a href='https://github.com/Alluysios/chatty-app' class='portfolio-link' target="_blank">Go to Repository <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <a href='https://github.com/Alluysios/chatty-app' class='portfolio-link' target="_blank">Check Repo<i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-card">
@@ -131,7 +143,7 @@
                         <div class="portfolio-detail">
                             <span class="title">Tracky App (React Native)</span>
                             <span class='description'>Tracky app is mobile application where you can create track marks and save them in your device.</span>
-                            <a href='https://github.com/Alluysios/trackapp-reactnative' class='portfolio-link' target="_blank">Go to Repository <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <a href='https://github.com/Alluysios/trackapp-reactnative' class='portfolio-link' target="_blank">Check Repo<i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-card">
@@ -139,7 +151,7 @@
                             <img src='img/portfolio/fresh.JPG' alt='arriba fashion' class='portfolio-image'>
                         </div>
                         <div class="portfolio-detail">
-                            <span class="title">Fresh Travel (My Blog)</span>
+                            <span class="title">Fresh Travel</span>
                             <span class='description'>Fresh Travel my own blog that I built using React, Redux, MongoDB, Nodejs. Building the site was a lot of fun teaches me a bunch of stuff that I just figured out. The site has a lot of features such as authentication, comments, admin panel for creating, updating, deleting blogs/posts and favorites. Check it out and see my adventure ❤️ .</span>
                             <a href='https://freshtravelers.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
@@ -152,6 +164,7 @@
                             <span class="title">Arriba Fashion</span>
                             <span class='description'>Project Arriba Fashion is a fashion ecommerce website. This was built using modern technologies: node.js, express, mongoDB, mongoose, passport(jwt), etc. This was also the very first project I've built using Node.js.</span>
                             <a href='https://arribafashion.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <a href='https://github.com/Alluysios/arriba-fashion' class='portfolio-link' target="_blank">Check Repo <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-card">
@@ -162,6 +175,7 @@
                             <span class="title">WeDevTogether</span>
                             <span class='description'>WeDevTogether is a developer community site where developers share ideas, create profiles, start discussions, meet developers from around the world, and most importantly help one another.</span>
                             <a href='https://wedevtogether.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <a href='https://github.com/Alluysios/WeDevTogether' class='portfolio-link' target="_blank">Check Repo <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="portfolio-card">
