--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                             <span class='skill'>React/React Native/Redux</span>
                             <span class='skill'>Node.js</span>
                             <span class='skill'>MongoDB</span>
-                            <span class='skill'>PHP (Basics including OOP)/MySQL</span>
+                            <span class='skill'>SQL</span>
+                            <span class='skill'>Basics PHP</span>
                             <span class='skill'>Git and NPM</span>
                             <span class='skill'>Photoshop</span>
                             <span class='skill'>Sketch</span>
