--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                             <img src='img/portfolio/feature.png' alt='arriba fashion' class='portfolio-image'>
                         </div>
                         <div class="portfolio-detail">
-                            <span class="title">Arriba Fashion & Beauty (MERN)</span>
-                            <span class='description'>Arriba Fashion & Beauty is a MERN version of Arriba Fashion. It has added feature like the cart component and more friendly UI.</span>
-                            <a href='https://arribafb.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <span class="title">Wishzona (MERN)</span>
+                            <span class='description'>Wishzona is a MERN version of Arriba Fashion. It has added feature like the cart component and more friendly UI.</span>
+                            <a href='https://salty-thicket-74274.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
                             <a href='https://github.com/Alluysios/arribafashion-beauty-MERN' class='portfolio-link' target="_blank">Check Repo <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
