--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                                 <img src='img/portfolio/feature2.jpg' alt='Wishzona, wish clone' class='portfolio-image'>
                             </div>
                             <div class="slider__item">
-                                <img src='img/portfolio/feature3.jpg' alt='Wishzona, wish clone' class='portfolio-image'>
+                                <img src='img/portfolio/feature3.JPG' alt='Wishzona, wish clone' class='portfolio-image'>
                             </div>
                             <div class="slider__item">
-                                <img src='img/portfolio/feature4.jpg' alt='Wishzona, wish clone' class='portfolio-image'>
+                                <img src='img/portfolio/feature4.JPG' alt='Wishzona, wish clone' class='portfolio-image'>
                             </div>
                             <div class='slider-circle'>
                                 <span class='circle main-circle' data-index='0'></span>
