--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="portfolio-detail">
                             <span class="title">Stress Friends (MERN)</span>
                             <span class='description'>Stress Friends a facebook clone social media web application, but for people with axiety where they can share their hardships and help one another.</span>
-                            <a href='https://arribafb.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <a href='https://stressfriends.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
                             <a href='https://github.com/Alluysios/stress-friends' class='portfolio-link' target="_blank">Check Repo <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
