--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                         </div>
 
                         <div class="portfolio-detail">
-                            <span class="title">Wishzona (MERN)</span>
-                            <span class='description'>Wishzona is a MERN Stack Ecommerce. You can write reviews, add/remove items in cart, authentication, integrated with stripe payment, pagination, loading spinner and category filtering.</span>
-                            <a href='https://salty-thicket-74274.herokuapp.com/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
+                            <span class="title">Wishzone (MERN)</span>
+                            <span class='description'>Wishzone is a MERN Stack Ecommerce. You can write reviews, add/remove items in cart, authentication, integrated with stripe payment, pagination, loading spinner and category filtering.</span>
+                            <a href='https://wishzone.netlify.app/' class='portfolio-link' target="_blank">Go to website <i class="fa fa-globe" aria-hidden="true"></i></a>
                             <a href='https://github.com/Alluysios/wishzona' class='portfolio-link' target="_blank">Check Repo <i class="fa fa-globe" aria-hidden="true"></i></a>
                         </div>
                     </div>
